Prevent overflow on hover with footer a tag

--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -6,8 +6,25 @@ footer{
 
 .modal-holder-footer{
     grid-column: 5;
-    margin-bottom: 4.5vh;
-    
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr); */
+    z-index: 1;
 }
+
+.modal-holder-footer .a-link{
+    padding: 5px;
+    padding-bottom: none;
+
+    font-family: "roboto";
+    font-weight: 300;
+    font-size: 2.5vh;
+
+    background: rgb(255, 255, 255);
+    color: rgb(58, 106, 236);
+    border-top: 3px solid white;
+    border-bottom: 3px solid white;
+}
+
+.modal-holder-footer .a-link:hover{
+    border-top: 2.5px solid rgb(58, 106, 236);
+    font-size: 2.75vh;
+}
+
